Autocomplete suggestions from DB and GitHub API

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -1,3 +1,7 @@
 // Import your components CSS files here.
 @import "alert";
 @import "navbar";
+@import "banner";
+@import "buttons";
+@import "forms";
+@import "autocomplete";
