--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -1,6 +1,13 @@
 // Define variables for your color scheme
 
+// Text
+$text-dark: #545454;
+$text-grey: #484848;
+$text-light: #A6A6A8;
+
+
 // For example:
+$body-bg-grey: #FAFAFA;
 $red: #EE5F5B;
 $blue: #469AE0;
 $yellow: #FDB631;
