--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,21 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<%= render 'banner' %>
+
+<section id="section-one">
+  <div class="home-icons">
+    <div class="features text-center">
+      <%= icon('fas', 'code') %>
+      <h4>TECHNOLOGY</h4>
+      <p>Search developers by programming language.</p>
+    </div>
+    <div class="features text-center">
+      <%= icon('fas', 'pencil-alt') %>
+      <h4>DESIGN</h4>
+      <p>Flesh out your idea in design iterations.</p>
+    </div>
+    <div class="features text-center">
+      <%= icon('fas', 'sitemap') %>
+      <h4>BUILD</h4>
+      <p>Build powerful applications with your selected team.</p>
+    </div>
+  </div>
+</section>
